# 2SATPlanarEmbeddingequivalenceReduction

./: CMakeLists.txt  README.md  counterexample.gml  descriptionAlgorithm.tex  references.bib  run
include/: GraphBuilder.h  NodePartition.h  algorithm.hpp  type.hpp  utils.hpp
resources/: adjExample.gml  counterexample.gml  randomProperLevelGraph_v_19_l_8.gml
results/: README.md  propagation_issue.ipe  propagation_issue.ipe.autosave.ipe
results/propagationWeakHananiTutte/: fourth
results/specialEncapsulation/: randomProperLevelGraph_v_13_l_4.gml  randomProperLevelGraph_v_4_l_2.gml
src/: algorithm.cpp  main.cpp  tags  utils.cpp
src/profiling/: level_nodes_to_time.gp  run_random_graphs.sh
